--- a/styles.css
+++ b/styles.css
@@ -1,99 +1,67 @@
-/* GENERAL */
-body {
-    background-image: url('https://exodus.deno.dev/assets/background');
+body { margin: 0; padding: 0; height: 100vh; }
+.container {
+    display: grid;
+    grid-template:
+        "map   log    log" 60%
+        "ascii log    log" 30%
+        "status status comms" 10%
+        / 30% 50% 20%;
+    height: 100vh;
+    gap: 5px;
+    padding: 5px;
 }
 
-body.client {
-    display: inline-block;
-    width: 100%;
-    outline: none;
+.map-box {
+    grid-area: map;
+    border: 1px solid #444;
+    overflow: auto;
+    font-family: monospace;
 }
 
-#main-content {
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    padding-left: 25px;
-    width: 95%;
-    float: left;
-}
-
-#sidebar {
-    width: 25%;
-    float: left;
-}
-
-/* LOG */
-#log {
-    height: 80vh;
-    width: 100%;
+.main-log {
+    grid-area: log;
+    border: 1px solid #444;
+    overflow-y: auto;
     padding: 10px;
-    overflow-y: scroll;
-    color: #d0d0d0;
-    background-color: rgba(0,0,0,.5);
+    font-family: monospace;
 }
 
-#log::-webkit-scrollbar {
-    display: none;
+.ascii-art {
+    grid-area: ascii;
+    border: 1px solid #444;
+    padding: 5px;
+    white-space: pre;
 }
 
-#log div {
-    min-height: 17.5px;
-    padding: 0px 0px 0px 0px;
-    margin-bottom: 0px;
-    font-family: 'Source Code Pro', monospace;
-}
-#log div.important {
-    color: #b30000;
-}
-#log div.command-echo {
-    color: #d68936;
+.comms-box {
+    grid-area: comms;
+    display: flex;
+    flex-direction: column;
 }
 
-/* COMMANDS INPUT */
-#command-input {
-    padding-top: 2vh;
+.status-bars {
+    grid-area: status;
+    display: flex;
+    gap: 10px;
+    padding: 5px;
 }
 
-#command-input textarea {
-    background-color: rgba(0,0,0,.5);
-    width: 100%;
-    color: #ffffff;
-    font-size: 15px;
+.status-bar {
+    width: 200px;
     height: 20px;
-    padding: 10px 10px 10px 10px;
-    resize: none;
+    background: #333;
+    border-radius: 3px;
+    overflow: hidden;
 }
 
-/* STATUS BARS */
-#stat-bars {
-    padding-top: 2vh;
-    display: inline-block;
+.health-fill {
+    height: 100%;
+    background: #c00;
     width: 100%;
+    transition: width 0.3s ease;
 }
 
-#health-bar {
-    color: #ffffff;
-    text-align: center;
-    background-color: #b30000;
-    margin-left: 4%;
-    float: left;
-    width: 25%;
+#command-input {
+    margin-top: auto;
+    padding: 5px;
 }
-#mana-bar {
-    color: #ffffff;
-    text-align: center;
-    background-color: #0053b3;
-    margin-left: 4%;
-    float: left;
-    width: 25%;
-}
-#fatigue-bar {
-    color: #ffffff;
-    text-align: center;
-    background-color: #055705;
-    margin-left: 4%;
-    float: left;
-    width: 25%;
-}
-
-/* MAP */
